bindings/ruby/ext/blazen/blazen.h


typedef struct BlazenEmbeddingModel BlazenEmbeddingModel;
typedef struct BlazenEmbeddingResponse BlazenEmbeddingResponse;
typedef struct BlazenError BlazenError;
typedef struct BlazenFuture BlazenFuture;
typedef struct BlazenImageGenResult BlazenImageGenResult;
typedef struct BlazenMedia BlazenMedia;
typedef struct BlazenModel BlazenModel;
typedef struct BlazenModelRequest BlazenModelRequest;
typedef struct BlazenModelResponse BlazenModelResponse;
typedef struct BlazenMusicChunk BlazenMusicChunk;
typedef struct BlazenMusicModel BlazenMusicModel;
typedef struct BlazenMusicResult BlazenMusicResult;
typedef struct BlazenSttResult BlazenSttResult;
typedef struct BlazenTargetVoice BlazenTargetVoice;
typedef struct BlazenTargetVoiceList BlazenTargetVoiceList;
typedef struct BlazenTool BlazenTool;
typedef struct BlazenToolCall BlazenToolCall;
typedef struct BlazenVcChunk BlazenVcChunk;
typedef struct BlazenVcModel BlazenVcModel;
typedef struct BlazenVcResult BlazenVcResult;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    int32_t (*on_chunk)(void *user_data, BlazenMusicChunk *chunk, BlazenError **out_err);
    int32_t (*on_done)(void *user_data, BlazenError **out_err);
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenMusicStreamSinkVTable;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    int32_t (*on_chunk)(void *user_data, BlazenVcChunk *chunk, BlazenError **out_err);
    int32_t (*on_done)(void *user_data, BlazenError **out_err);
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenVcStreamSinkVTable;
 void blazen_music_model_free(BlazenMusicModel *model);
int32_t blazen_music_model_new_fal(const char *api_key,
                                   const char *model,
                                   BlazenMusicModel **out_model,
                                   BlazenError **out_err);
int32_t blazen_music_model_new_musicgen(const char *variant,
                                        const char *device,
                                        const char *cache_dir,
                                        float max_duration_seconds,
                                        BlazenMusicModel **out_model,
                                        BlazenError **out_err);
int32_t blazen_music_model_new_stable_audio(const char *variant,
                                            const char *tokenizer_path,
                                            const char *device,
                                            float max_duration_seconds,
                                            BlazenMusicModel **out_model,
                                            BlazenError **out_err);
int32_t blazen_music_model_new_audiogen(const char *repo_id,
                                        const char *revision,
                                        const char *device,
                                        const char *cache_dir,
                                        float max_duration_seconds,
                                        BlazenMusicModel **out_model,
                                        BlazenError **out_err);
int32_t blazen_music_model_generate_music_blocking(const BlazenMusicModel *model,
                                                   const char *prompt,
                                                   float duration_seconds,
                                                   BlazenMusicResult **out_result,
                                                   BlazenError **out_err);
BlazenFuture *blazen_music_model_generate_music(const BlazenMusicModel *model,
                                                const char *prompt,
                                                float duration_seconds);
int32_t blazen_music_model_generate_sfx_blocking(const BlazenMusicModel *model,
                                                 const char *prompt,
                                                 float duration_seconds,
                                                 BlazenMusicResult **out_result,
                                                 BlazenError **out_err);
BlazenFuture *blazen_music_model_generate_sfx(const BlazenMusicModel *model,
                                              const char *prompt,
                                              float duration_seconds);
int32_t blazen_future_take_music_result(BlazenFuture *fut,
                                        BlazenMusicResult **out,
                                        BlazenError **err);
 char *blazen_stt_result_transcript(const BlazenSttResult *result);
 char *blazen_stt_result_language(const BlazenSttResult *result);
 uint64_t blazen_stt_result_duration_ms(const BlazenSttResult *result);
 void blazen_stt_result_free(BlazenSttResult *result);
 uintptr_t blazen_image_gen_result_images_count(const BlazenImageGenResult *result);
 BlazenMedia *blazen_image_gen_result_images_get(const BlazenImageGenResult *result, uintptr_t idx);
 void blazen_image_gen_result_free(BlazenImageGenResult *result);
 const float *blazen_music_chunk_samples(const BlazenMusicChunk *handle, uintptr_t *out_len);
 bool blazen_music_chunk_is_final(const BlazenMusicChunk *handle);
 float blazen_music_chunk_latency_seconds(const BlazenMusicChunk *handle);
 void blazen_music_chunk_free(BlazenMusicChunk *handle);
 const uint8_t *blazen_music_result_bytes(const BlazenMusicResult *result, uintptr_t *out_len);
 char *blazen_music_result_mime_type(const BlazenMusicResult *result);
 uint32_t blazen_music_result_sample_rate(const BlazenMusicResult *result);
 uint32_t blazen_music_result_channels(const BlazenMusicResult *result);
 float blazen_music_result_duration_seconds(const BlazenMusicResult *result);
 char *blazen_music_result_url(const BlazenMusicResult *result);
 void blazen_music_result_free(BlazenMusicResult *result);
 const float *blazen_vc_chunk_samples(const BlazenVcChunk *handle, uintptr_t *out_len);
 bool blazen_vc_chunk_is_final(const BlazenVcChunk *handle);
 float blazen_vc_chunk_latency_seconds(const BlazenVcChunk *handle);
 void blazen_vc_chunk_free(BlazenVcChunk *handle);
 const uint8_t *blazen_vc_result_bytes(const BlazenVcResult *result, uintptr_t *out_len);
 char *blazen_vc_result_mime_type(const BlazenVcResult *result);
 uint32_t blazen_vc_result_sample_rate(const BlazenVcResult *result);
 float blazen_vc_result_duration_seconds(const BlazenVcResult *result);
 void blazen_vc_result_free(BlazenVcResult *result);
 char *blazen_target_voice_id(const BlazenTargetVoice *voice);
 char *blazen_target_voice_label(const BlazenTargetVoice *voice);
 uint32_t blazen_target_voice_sample_rate_hz(const BlazenTargetVoice *voice);
 void blazen_target_voice_free(BlazenTargetVoice *voice);
 uintptr_t blazen_target_voice_list_len(const BlazenTargetVoiceList *list);
const BlazenTargetVoice *blazen_target_voice_list_get(const BlazenTargetVoiceList *list,
                                                      uintptr_t idx);
 BlazenTargetVoice *blazen_target_voice_list_take(BlazenTargetVoiceList *list, uintptr_t idx);
 void blazen_target_voice_list_free(BlazenTargetVoiceList *list);
 void blazen_vc_model_free(BlazenVcModel *model);
int32_t blazen_vc_model_new_rvc(const char *voice_dir,
                                const char *device,
                                BlazenVcModel **out_model,
                                BlazenError **out_err);
int32_t blazen_vc_model_convert_voice_blocking(const BlazenVcModel *model,
                                               const char *input_audio_path,
                                               const char *target_voice_id,
                                               BlazenVcResult **out_result,
                                               BlazenError **out_err);
BlazenFuture *blazen_vc_model_convert_voice(const BlazenVcModel *model,
                                            const char *input_audio_path,
                                            const char *target_voice_id);
 int32_t blazen_future_take_vc_result(BlazenFuture *fut, BlazenVcResult **out, BlazenError **err);
int32_t blazen_future_take_target_voice_list(BlazenFuture *fut,
                                             BlazenTargetVoiceList **out,
                                             BlazenError **err);
int32_t blazen_vc_model_list_target_voices_blocking(const BlazenVcModel *model,
                                                    BlazenTargetVoiceList **out_list,
                                                    BlazenError **out_err);
 BlazenFuture *blazen_vc_model_list_target_voices(const BlazenVcModel *model);
int32_t blazen_vc_model_register_target_voice_blocking(const BlazenVcModel *model,
                                                       const char *voice_id,
                                                       const char *reference_audio_path,
                                                       BlazenError **out_err);
BlazenFuture *blazen_vc_model_register_target_voice(const BlazenVcModel *model,
                                                    const char *voice_id,
                                                    const char *reference_audio_path);
 char *blazen_model_model_id(const BlazenModel *model);
int32_t blazen_model_complete_blocking(const BlazenModel *model,
                                       BlazenModelRequest *request,
                                       BlazenModelResponse **out_response,
                                       BlazenError **out_err);
 BlazenFuture *blazen_model_complete(const BlazenModel *model, BlazenModelRequest *request);
 void blazen_model_free(BlazenModel *model);
 char *blazen_embedding_model_model_id(const BlazenEmbeddingModel *model);
 uint32_t blazen_embedding_model_dimensions(const BlazenEmbeddingModel *model);
int32_t blazen_embedding_model_embed_blocking(const BlazenEmbeddingModel *model,
                                              const char *const *inputs,
                                              uintptr_t inputs_count,
                                              BlazenEmbeddingResponse **out_response,
                                              BlazenError **out_err);
BlazenFuture *blazen_embedding_model_embed(const BlazenEmbeddingModel *model,
                                           const char *const *inputs,
                                           uintptr_t inputs_count);
 void blazen_embedding_model_free(BlazenEmbeddingModel *model);
 BlazenMedia *blazen_media_new(const char *kind, const char *mime_type, const char *data_base64);
 char *blazen_media_kind(const BlazenMedia *handle);
 char *blazen_media_mime_type(const BlazenMedia *handle);
 char *blazen_media_data_base64(const BlazenMedia *handle);
 void blazen_media_free(BlazenMedia *handle);
 BlazenToolCall *blazen_tool_call_new(const char *id, const char *name, const char *arguments_json);
 char *blazen_tool_call_id(const BlazenToolCall *handle);
 char *blazen_tool_call_name(const BlazenToolCall *handle);
 char *blazen_tool_call_arguments_json(const BlazenToolCall *handle);
 void blazen_tool_call_free(BlazenToolCall *handle);
BlazenTool *blazen_tool_new(const char *name,
                            const char *description,
                            const char *parameters_json);
 char *blazen_tool_name(const BlazenTool *handle);
 char *blazen_tool_description(const BlazenTool *handle);
 char *blazen_tool_parameters_json(const BlazenTool *handle);
 void blazen_tool_free(BlazenTool *handle);
int32_t blazen_music_model_stream_generate_music_blocking(const BlazenMusicModel *model,
                                                          const char *prompt,
                                                          float duration_seconds,
                                                          BlazenMusicStreamSinkVTable sink,
                                                          BlazenError **out_err);
BlazenFuture *blazen_music_model_stream_generate_music(const BlazenMusicModel *model,
                                                       const char *prompt,
                                                       float duration_seconds,
                                                       BlazenMusicStreamSinkVTable sink);
int32_t blazen_music_model_stream_generate_sfx_blocking(const BlazenMusicModel *model,
                                                        const char *prompt,
                                                        float duration_seconds,
                                                        BlazenMusicStreamSinkVTable sink,
                                                        BlazenError **out_err);
BlazenFuture *blazen_music_model_stream_generate_sfx(const BlazenMusicModel *model,
                                                     const char *prompt,
                                                     float duration_seconds,
                                                     BlazenMusicStreamSinkVTable sink);
int32_t blazen_vc_model_stream_convert_pcm_to_sink_blocking(const BlazenVcModel *model,
                                                            const float *input_pcm,
                                                            uintptr_t input_pcm_len,
                                                            const char *target_voice_id,
                                                            BlazenVcStreamSinkVTable sink,
                                                            BlazenError **out_err);
BlazenFuture *blazen_vc_model_stream_convert_pcm_to_sink(const BlazenVcModel *model,
                                                         const float *input_pcm,
                                                         uintptr_t input_pcm_len,
                                                         const char *target_voice_id,
                                                         BlazenVcStreamSinkVTable sink);