bindings/ruby/lib/blazen/ffi.rb


    # SttResult accessors
    attach_function :blazen_stt_result_transcript,   [:pointer], :pointer
    attach_function :blazen_stt_result_language,     [:pointer], :pointer
    attach_function :blazen_stt_result_duration_ms,  [:pointer], :uint64
    attach_function :blazen_stt_result_free,         [:pointer], :void

    # ImageGenResult accessors
    attach_function :blazen_image_gen_result_images_count, [:pointer], :size_t
    attach_function :blazen_image_gen_result_images_get,   [:pointer, :size_t], :pointer
    attach_function :blazen_image_gen_result_free,         [:pointer], :void

    # -------------------------------------------------------------------
    # Compute — Music / SFX (MusicModel + MusicChunk + MusicResult)
    # -------------------------------------------------------------------
    #
    # The fal factory is always present (no feature gate). The three native
    # factories (+musicgen+ / +stable_audio+ / +audiogen+) are feature-gated
    # in the cabi build; we rescue +::FFI::NotFoundError+ so a minimal
    # libblazen_cabi loads cleanly and downstream callers can probe via
    # +Blazen::FFI.respond_to?+.
    attach_function :blazen_music_model_new_fal,
                    [:pointer, :pointer, :pointer, :pointer], :int32
    begin
      attach_function :blazen_music_model_new_musicgen,
                      [:pointer, :pointer, :pointer, :float, :pointer, :pointer], :int32
    rescue ::FFI::NotFoundError
      # Optional: only present when libblazen_cabi was built with the
      # +music-musicgen+ feature.
    end
    begin
      attach_function :blazen_music_model_new_stable_audio,
                      [:pointer, :pointer, :pointer, :float, :pointer, :pointer], :int32
    rescue ::FFI::NotFoundError
      # Optional: only present when libblazen_cabi was built with the
      # +music-stable-audio+ feature.
    end
    begin
      attach_function :blazen_music_model_new_audiogen,
                      [:pointer, :pointer, :pointer, :pointer, :float, :pointer, :pointer],
                      :int32
    rescue ::FFI::NotFoundError
      # Optional: only present when libblazen_cabi was built with the
      # +music-audiogen+ feature.
    end

    # Lifecycle + non-streaming generate
    attach_function :blazen_music_model_free, [:pointer], :void
    attach_function :blazen_music_model_generate_music_blocking,
                    [:pointer, :pointer, :float, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_music_model_generate_music,
                    [:pointer, :pointer, :float], :pointer
    attach_function :blazen_music_model_generate_sfx_blocking,
                    [:pointer, :pointer, :float, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_music_model_generate_sfx,
                    [:pointer, :pointer, :float], :pointer
    attach_function :blazen_future_take_music_result,
                    [:pointer, :pointer, :pointer], :int32

    # Streaming pumps (4: music + SFX, each in blocking / async flavor).
    # +sink+ is passed by value so the cabi consumes the +user_data+ even
    # on early-return failure paths.
    attach_function :blazen_music_model_stream_generate_music_blocking,
                    [:pointer, :pointer, :float,
                     BlazenMusicStreamSinkVTable.by_value, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_music_model_stream_generate_music,
                    [:pointer, :pointer, :float,
                     BlazenMusicStreamSinkVTable.by_value],
                    :pointer
    attach_function :blazen_music_model_stream_generate_sfx_blocking,
                    [:pointer, :pointer, :float,
                     BlazenMusicStreamSinkVTable.by_value, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_music_model_stream_generate_sfx,
                    [:pointer, :pointer, :float,
                     BlazenMusicStreamSinkVTable.by_value],
                    :pointer

    # MusicChunk accessors (caller-owned chunk handed to +on_chunk+ sink)
    attach_function :blazen_music_chunk_samples,
                    [:pointer, :pointer], :pointer
    attach_function :blazen_music_chunk_is_final,
                    [:pointer], :bool
    attach_function :blazen_music_chunk_latency_seconds,
                    [:pointer], :float
    attach_function :blazen_music_chunk_free,
                    [:pointer], :void

    # MusicResult accessors
    attach_function :blazen_music_result_bytes,
                    [:pointer, :pointer], :pointer
    attach_function :blazen_music_result_mime_type,
                    [:pointer], :pointer
    attach_function :blazen_music_result_sample_rate,
                    [:pointer], :uint32
    attach_function :blazen_music_result_channels,
                    [:pointer], :uint32
    attach_function :blazen_music_result_duration_seconds,
                    [:pointer], :float
    attach_function :blazen_music_result_url,
                    [:pointer], :pointer
    attach_function :blazen_music_result_free,
                    [:pointer], :void

    # -------------------------------------------------------------------
    # Compute — Voice Conversion (RVC) (VcModel + VcChunk + VcResult +
    # TargetVoice + TargetVoiceList)
    # -------------------------------------------------------------------
    #
    # The RVC factory (+blazen_vc_model_new_rvc+) is feature-gated under
    # +audio-vc-rvc+ in the cabi build, so we rescue +FFI::NotFoundError+
    # for it and surface the absence via +Blazen::FFI.respond_to?+ in
    # +compute.rb+. All accessor / lifecycle / streaming / future-taker
    # entry points are always present.
    begin
      attach_function :blazen_vc_model_new_rvc,
                      [:pointer, :pointer, :pointer, :pointer], :int32
    rescue ::FFI::NotFoundError
      # Optional: only present when libblazen_cabi was built with the
      # +audio-vc-rvc+ feature.
    end

    attach_function :blazen_vc_model_free, [:pointer], :void

    attach_function :blazen_vc_model_convert_voice_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_vc_model_convert_voice,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_vc_model_list_target_voices_blocking,
                    [:pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_vc_model_list_target_voices,
                    [:pointer], :pointer

    attach_function :blazen_vc_model_register_target_voice_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_vc_model_register_target_voice,
                    [:pointer, :pointer, :pointer], :pointer

    attach_function :blazen_future_take_vc_result,
                    [:pointer, :pointer, :pointer], :int32
    attach_function :blazen_future_take_target_voice_list,
                    [:pointer, :pointer, :pointer], :int32

    # Streaming pumps (2: blocking / async). +sink+ is passed by value so
    # the cabi consumes the +user_data+ even on early-return failure
    # paths.
    attach_function :blazen_vc_model_stream_convert_pcm_to_sink_blocking,
                    [:pointer, :pointer, :size_t, :pointer,
                     BlazenVcStreamSinkVTable.by_value, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_vc_model_stream_convert_pcm_to_sink,
                    [:pointer, :pointer, :size_t, :pointer,
                     BlazenVcStreamSinkVTable.by_value],
                    :pointer

    # VcChunk accessors (caller-owned chunk handed to +on_chunk+ sink)
    attach_function :blazen_vc_chunk_samples,         [:pointer, :pointer], :pointer
    attach_function :blazen_vc_chunk_is_final,        [:pointer], :bool
    attach_function :blazen_vc_chunk_latency_seconds, [:pointer], :float
    attach_function :blazen_vc_chunk_free,            [:pointer], :void

    # VcResult accessors
    attach_function :blazen_vc_result_bytes,            [:pointer, :pointer], :pointer
    attach_function :blazen_vc_result_mime_type,        [:pointer], :pointer
    attach_function :blazen_vc_result_sample_rate,      [:pointer], :uint32
    attach_function :blazen_vc_result_duration_seconds, [:pointer], :float
    attach_function :blazen_vc_result_free,             [:pointer], :void

    # TargetVoice accessors
    attach_function :blazen_target_voice_id,             [:pointer], :pointer
    attach_function :blazen_target_voice_label,          [:pointer], :pointer
    attach_function :blazen_target_voice_sample_rate_hz, [:pointer], :uint32
    attach_function :blazen_target_voice_free,           [:pointer], :void

    # TargetVoiceList lifecycle / iteration
    attach_function :blazen_target_voice_list_len,  [:pointer], :size_t
    attach_function :blazen_target_voice_list_get,  [:pointer, :size_t], :pointer
    attach_function :blazen_target_voice_list_take, [:pointer, :size_t], :pointer
    attach_function :blazen_target_voice_list_free, [:pointer], :void

    # -------------------------------------------------------------------
    # LLM — Model / EmbeddingModel
    # -------------------------------------------------------------------
    attach_function :blazen_model_model_id, [:pointer], :pointer
    attach_function :blazen_model_complete_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_model_complete,
                    [:pointer, :pointer], :pointer
    attach_function :blazen_model_free, [:pointer], :void

    attach_function :blazen_embedding_model_model_id,   [:pointer], :pointer
    attach_function :blazen_embedding_model_dimensions, [:pointer], :uint32
    attach_function :blazen_embedding_model_embed_blocking,
                    [:pointer, :pointer, :size_t, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_embedding_model_embed,
                    [:pointer, :pointer, :size_t], :pointer
    attach_function :blazen_embedding_model_free, [:pointer], :void

    # -------------------------------------------------------------------
    # LLM records — Media / ToolCall / Tool / TokenUsage / ChatMessage /
    #               ModelRequest / ModelResponse / EmbeddingResponse
    # -------------------------------------------------------------------
    attach_function :blazen_media_new,
                    [:pointer, :pointer, :pointer], :pointer
    attach_function :blazen_media_kind,        [:pointer], :pointer
    attach_function :blazen_media_mime_type,   [:pointer], :pointer
    attach_function :blazen_media_data_base64, [:pointer], :pointer
    attach_function :blazen_media_free,        [:pointer], :void

    attach_function :blazen_tool_call_new,
                    [:pointer, :pointer, :pointer], :pointer
    attach_function :blazen_tool_call_id,             [:pointer], :pointer
    attach_function :blazen_tool_call_name,           [:pointer], :pointer
    attach_function :blazen_tool_call_arguments_json, [:pointer], :pointer
    attach_function :blazen_tool_call_free,           [:pointer], :void

    attach_function :blazen_tool_new,
                    [:pointer, :pointer, :pointer], :pointer
    attach_function :blazen_tool_name,            [:pointer], :pointer
    attach_function :blazen_tool_description,     [:pointer], :pointer
    attach_function :blazen_tool_parameters_json, [:pointer], :pointer
    attach_function :blazen_tool_free,            [:pointer], :void
